# Market-Maker-Engine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  generate_repo.py  pyproject.toml
configs/: app.yaml  execution.yaml  feeds.yaml  logging.yaml  risk.yaml  strategy.yaml
deployment/k8s/: api-deployment.yaml  monitoring.yaml  redis-deployment.yaml  worker-deployment.yaml
deployment/systemd/: execution.service  market_data.service  risk.service  strategy.service
infra/docker/: app.Dockerfile  backtest.Dockerfile  worker.Dockerfile
infra/grafana/dashboards/: latency_dashboard.json  pnl_dashboard.json  risk_dashboard.json
scripts/: healthcheck.py  profile_latency.py  replay_session.py  run_backtest.py  run_live.py  seed_redis_streams.py
src/market_maker/: constants.py  main.py  settings.py
src/market_maker/api/: app.py  schemas.py
src/market_maker/backtest/: event_loop.py  fills.py  metrics.py  parameter_sweep.py  replay_engine.py  reports.py  simulator.py
src/market_maker/common/: enums.py  ids.py  time.py  types.py  utils.py
src/market_maker/execution/: cancel_replace.py  execution_engine.py  fill_handler.py  order_manager.py  order_router.py
src/market_maker/market_data/: feed_manager.py  normalizer.py  publisher.py
src/market_maker_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/fixtures/: sample_l2.json
tests/integration/: test_backtest_pipeline.py  test_feed_to_signal_flow.py  test_quote_to_execution_flow.py
tests/unit/: test_order_book.py  test_pnl.py  test_quote_engine.py  test_risk_engine.py  test_signals.py
(+58 files in other folders)
